# mcp-busca-municipio-validador

./: .gitignore  AMBIENTE.md  MCP_README.md  README.md  associar_municipios_validadores.py  ativar_ambiente.bat  buscar_municipio_validador.py  exemplo_uso.py  pyproject.toml  requirements.txt  test_mcp_local.py
.github/workflows/: deploy.yml
PresetFiles/: TACES06.TXT  TFIX105.txt  tfixes.xml
exemplos/: exemplo_uso_mcp.py
scripts/: build.bat  build.sh  deploy-jfrog.bat  deploy-jfrog.sh
src/: __init__.py  mcp_server.py
